--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
   
   <context-param>
   	<param-name>dbPassword</param-name>
-  	<param-value>ngu123456,</param-value>
+  	<param-value>123456</param-value>
   </context-param>
   
 </web-app>
